# django-bootstrat-start

./: MANIFEST.in  README.md  README.rst  setup.cfg
app/: urls.py  views.py
app/static/css/: main.css
app/static/js/: main.js
app/templates/app/: home.html  root.html
django_bootstrap_start.egg-info/: PKG-INFO  SOURCES.txt
docs/: docs.txt
